force-app/main/default/objects/Absence_Request__c/Absence_Request__c.object-meta.xml
<CustomObject>
    <label>Absence Request</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absence Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>