force-app/main/default/objects/Absence_Request__c/fields/Digital_Signature__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signature__c</fullName>
    <label>Digital Signature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>