force-app/main/default/objects/Absence_Request__c/fields/Main_Reason_for_Absence__c.field-meta.xml
<CustomField>
    <fullName>Main_Reason_for_Absence__c</fullName>
    <label>Main Reason for Absence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Work-Related Reasons</fullName>
            </value>
            <value>
                <fullName>Legal and Administrative</fullName>
            </value>
            <value>
                <fullName>Other Reasons</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave Types</fullName>
            </value>
            <value>
                <fullName>Half-Day or Partial Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>