force-app/main/default/objects/Absence_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <color>#FF9966</color>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Pending Manager Approval</fullName>
                <color>#FF9966</color>
                <label>Pending Manager Approval</label>
            </value>
            <value>
                <fullName>Pending HR Approval</fullName>
                <color>#FF9966</color>
                <label>Pending HR Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#33CC00</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <color>#FF0000</color>
                <label>Denied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>