force-app/main/default/objects/Absence_Request__c/fields/Subreason_for_Absence__c.field-meta.xml
<CustomField>
    <fullName>Subreason_for_Absence__c</fullName>
    <label>Subreason for Absence</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Reason_for_Absence__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family events (e.g., wedding, graduation)</fullName>
            </value>
            <value>
                <fullName>Medical appointment</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Family emergency</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Illness or medical leave</fullName>
            </value>
            <value>
                <fullName>Bereavement or funeral</fullName>
            </value>
            <value>
                <fullName>Mental health day</fullName>
            </value>
            <value>
                <fullName>Business trip</fullName>
            </value>
            <value>
                <fullName>Training or professional development</fullName>
            </value>
            <value>
                <fullName>Work overload</fullName>
            </value>
            <value>
                <fullName>Office relocation</fullName>
            </value>
            <value>
                <fullName>Remote work</fullName>
            </value>
            <value>
                <fullName>Jury duty</fullName>
            </value>
            <value>
                <fullName>Military service</fullName>
            </value>
            <value>
                <fullName>Court appearance</fullName>
            </value>
            <value>
                <fullName>Public holiday</fullName>
            </value>
            <value>
                <fullName>Administrative leave</fullName>
            </value>
            <value>
                <fullName>Religious observance</fullName>
            </value>
            <value>
                <fullName>Community service or volunteering</fullName>
            </value>
            <value>
                <fullName>Maternity or paternity leave</fullName>
            </value>
            <value>
                <fullName>Adoption leave</fullName>
            </value>
            <value>
                <fullName>Sabbatical</fullName>
            </value>
            <value>
                <fullName>Personal unpaid leave</fullName>
            </value>
            <value>
                <fullName>Extended vacation (unpaid)</fullName>
            </value>
            <value>
                <fullName>Educational leave (unpaid)</fullName>
            </value>
            <value>
                <fullName>Morning leave</fullName>
            </value>
            <value>
                <fullName>Afternoon leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>