force-app/main/default/objects/Absence_Request__c/fields/Total_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Date__c</fullName>
    <formula>End_Date__c  -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>