force-app/main/default/objects/Absence_Request__c/validationRules/restrict_standard_user.validationRule-meta.xml
<ValidationRule>
    <fullName>restrict_standard_user</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL( Status__c , &quot;Requested&quot;)),
  $Profile.Name = &quot;Standard User&quot;
)</errorConditionFormula>
    <errorMessage>you cannot click this option</errorMessage>
</ValidationRule>