force-app/main/default/objects/Absence_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Employee_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Subreason_for_Absence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>